<resources>
    <string name="app_name">KasiCrafts</string>
    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="kasi_crafts_logo">Kasi Crafts Logo</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="register_prompt">Don’t have an account? Register here.</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_in_subtitle">Sign in to explore authentic African crafts</string>
</resources>